edition = "2023";

package tgnotifier;

option go_package = "github.com/kukymbr/tgnotifier/internal/api/grpc";

service Messages {
  rpc Send(SendMessageRequest) returns (SendMessageResponse);
}

message SendMessageRequest {
  string bot_name = 1;
  string chat_name = 2;
  MessageRequest message = 3;
}

message MessageRequest {
  string text = 1;
  string parse_mode = 2;
  bool disable_notification = 3;
  bool protect_content = 4;
}

message SendMessageResponse {
  bool ok = 1;
  TgMessage result = 2;
}

message TgMessage {
  int64 message_id = 1;
  uint64 date = 2;
  int64 message_thread_id = 3;
  TgUser from = 4;
}

message TgUser {
  int64 id = 1;

  string first_name = 2;
  string last_name = 3;
  string username = 4;
  string language_code = 5;

  bool is_bot = 6;
  bool is_premium = 7;

  bool added_to_attachment_menu = 8;
  bool can_join_groups = 9;
  bool can_read_all_group_messages = 10;
  bool supports_inline_queries = 11;
  bool can_connect_to_business = 12;
}